# anam-cookbook

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/[slug]/: page.tsx
components/: AllRecipesSection.tsx  AnamLogo.tsx  AuthorAvatar.tsx  CodeBlock.tsx  DifficultyBadge.tsx  FeaturedSection.tsx  Header.tsx  PostHogPageView.tsx  PostHogProvider.tsx  RecipeCard.tsx  RecipeListItem.tsx  SearchButton.tsx  SearchModal.tsx  TagBadge.tsx  TagFilter.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TopicCard.tsx  TopicsSection.tsx
components/mdx/: Callout.tsx  CodeBlockServer.tsx  Steps.tsx  index.tsx
content/recipes/: basic-nextjs-app.mdx  byo-llm-integration.mdx  client-side-tools.mdx  custom-llm-client-side.mdx  custom-llm-integration.mdx  elevenlabs-conversational-agents.mdx  elevenlabs-expressive-voice-agents.mdx  elevenlabs-server-side-agents.mdx  ephemeral-webhook-tools.mdx  gemini-vision-with-anam-livekit.mdx  getting-started-with-anam.mdx  getting-started-with-livekit.mdx  python-audio-passthrough-tts.mdx  python-byo-llm.mdx  (+7 more)
examples/python-audio-passthrough-tts/: .env.example  README.md  main.py  pyproject.toml
examples/python-byo-llm/: .env.example  README.md  llm_output_sample.txt  main.py  pyproject.toml
examples/videosdk-anam-avatar/: .env.example  README.md  cascading_agent.py  pyproject.toml  realtime_agent.py
examples/vision-agents-anam-dynamic-background/: .env.example  README.md  main.py  pyproject.toml  scene_aware_anam_avatar_publisher.py
lib/: attributionScript.ts  config.ts  organization.ts  recipes.ts  shiki.ts
scripts/: update-org-members.sh
(+60 files in other folders)
