[project]
name = "vision-agents-anam-dynamic-background"
version = "0.1.0"
description = "Vision Agents + Anam dynamic background switching demo"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "vision-agents[anam,deepgram,elevenlabs,gemini,getstream,openai]",
]

[tool.uv]
package = false
